index.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --ivory: #E6E6FA;
    --jet-black: #0A0A0A;
    --grey: #8e98c0;
    --secondary: #069DBF;
}

.homepage {
    width: 100%;
    height: 100vh;
    background-color: var(--jet-black);
    padding: 60px;
    position: sticky;
    top: 0;
    z-index: -1;
}

nav {
    color: var(--ivory);
    font-family: 'DM Sans', sans-serif;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.nav-name {
    font-size: 2.5rem;
    z-index: 10;
}

.nav-items {
    list-style: none;
    display: flex;
    gap: 70px;
    font-size: 1.5rem;
    color: var(--grey);
    z-index: 10;
}

.nav-item {
    padding: 5px 20px;
    transition: 0.2s cubic-bezier(0.19, 1, 0.22, 1);
}

.nav-item:hover, .nav-item.outsource:hover {
    border-color: var(--ivory);
    color: var(--ivory);
    cursor: pointer;
}

.outsource {
    border: 2px solid var(--grey);
    border-radius: 1.5rem;
    transition: 0.2s cubic-bezier(0.19, 1, 0.22, 1);
}

.bg-image {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin: 0 auto;
    z-index: 0;
}

main {
    background: url("assets/pattern2.png") center 85% /cover;
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: center;
}

.main-title {
    color: white;
    z-index: 15;
    font-family: 'Montserrat';
    font-weight: 500;
    font-size: 11rem;
}

.first {
    margin-left: 100px;
}

.second {
    margin-top: -20px;
    margin-left: 50px;
    display: flex;
}


.main-description {
    color: var(--grey);
    font-family: 'DM Sans', sans-serif;
    font-size: 2.5rem;
    text-align: center;
}

.scroll {
    position: absolute;
    bottom: 60px;
}

.scroll-indication {
    cursor: pointer;
    background-color: var(--ivory);
    width: 64px;
    height: 64px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.2s;
    offset-anchor: center;
}

.scroll-indication:hover {
    transform: scale(1.2);
}


.scroll-text {
    color: var(--ivory);
    font-family: 'DM Sans';
    position: absolute;
    top: -50px;
    left: 30px;
}

.scroll-text span {
    position: absolute;
    transform-origin: 0 80px;
    font-size: 1.2rem;
}

.landing-contact {
    color: white;
    position: absolute;
    font-family: 'DM Sans';
    background-color: var(--secondary);
    width: 100px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    bottom: 50px;
    right: 80px;
}

.skills {
    background-color: var(--ivory);
    height: 100vh;
    border-radius: 16px 16px 0 0;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

